--- a/SharpOscilloscope/SharpOscilloscope.csproj
+++ b/SharpOscilloscope/SharpOscilloscope.csproj
@@ -9,6 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NAudio" Version="2.2.1" />
+    <PackageReference Include="NAudio.WinForms" Version="2.2.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SharpOscilloscopeLib\SharpOscilloscopeLib.csproj" />
     <ProjectReference Include="..\SharpOscilloscopeScope\SharpOscilloscopeScope.csproj" />
   </ItemGroup>
