Added icon and show function generator on the taskbar.

--- a/SharpOscilloscope/SharpOscilloscope.csproj
+++ b/SharpOscilloscope/SharpOscilloscope.csproj
@@ -6,7 +6,12 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <ApplicationIcon>SharpOscilloscope_w.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="SharpOscilloscope_w.ico" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="NAudio" Version="2.2.1" />
